# cpp-study

cpp-base/: CMakeLists.txt  CMakePresets.json  build.bat
cpp-base/include/janna/util/: log_util.h  pch.h
cpp-base/src/app/: CMakeLists.txt  main.cpp
cpp-base/src/util/: CMakeLists.txt  log_util.cpp
cpp-base/test/: CMakeLists.txt  test_common.cpp  test_main.cpp
